--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,32 +1,39 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: flask-app-deploy
+  creationTimestamp: null
+  labels:
+    app: flaskdemo
+  name: flaskdemo
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: flask-app
+      app: flaskdemo
+  strategy: {}
   template:
     metadata:
+      creationTimestamp: null
       labels:
-        app: flask-app
+        app: flaskdemo
     spec:
       containers:
-      - name: flask-app-container
-        image: alnx551/python-app:9
-        ports:
-        - containerPort: 5000
+      - image: alnx551/python-app:7
+        name: flaskdemo
+        resources: {}
+status: {}
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: flask-app-svc
+  name: flask-service
+  labels:
+    app: flask-service
 spec:
   type: NodePort
   ports:
-  - port: 80
+  - nodePort: 30001
+    port: 80
     targetPort: 5000
-    nodePort: 32000
   selector:
-    app: flask-app
+    app: flaskdemo
